fixed alignment on men and women pages

--- a/src/scss/_men.scss
+++ b/src/scss/_men.scss
@@ -27,21 +27,16 @@
     
         @media screen and (min-width: 768px){
             font-size: 50px;
-            margin: 20% 0 0 22%;
+            margin: 20% 0 0 8.3%;
         }
     
         @media screen and (min-width: 1024px){
             font-size: 64px;
-            margin: 20% 0 0 14%;
         }
     
         @media screen and (min-width: 1224px){
             font-size: 74px;
-            margin: 20% 0 0 17.3%;
-        }
-
-        @media screen and (min-width: 1440px){
-            margin: 20% 0 0 18.5%;
+            margin-top: 16%;
         }
     }
 
@@ -54,30 +49,26 @@
         }
         position: absolute;
         margin-top: 37%;
-        left: 22%;
+        left: 9%;
         width: 55%;
 
         @media screen and (min-width: 1024px){
-            left: 14.4%;
             width: 59%;
         }
 
         @media screen and (min-width: 1224px){
-            left: 17.5%;
-            margin-top: 35%;
+            margin-top: 31%;
         }
 
         @media screen and (min-width: 1440px){
-            left: 19%;
             width: 50%;
-            margin-top: 33%;
+            margin-top: 28%;
         }
     }
 
 }
 
 .categories{
-    // text-align: center;
     display: flex;
     position: absolute;
     left: 12%;
@@ -85,18 +76,13 @@
 
     @media screen and (min-width: 768px){
         margin-top: 29%;
-        left: 23%;
-    }
-    @media screen and (min-width: 1024px){
-        left: 14.4%;
+        left: 9%;
     }
     @media screen and (min-width: 1224px){
-        left: 17.4%;
-        margin-top: 28.5%;
+        margin-top: 23.5%;
     }
     @media screen and (min-width: 1440px){
-        left: 19%;
-        margin-top: 27%;
+        margin-top: 22%;
     }
 
     ul{
@@ -118,10 +104,7 @@
             font-family: futura;
             line-height: 1.5em;
             @media screen and (min-width: 1224px){
-                line-height: 1.6em;
-            }
-            @media screen and (min-width: 1440px){
-                line-height: 1.8em;
+                line-height: 2em;
             }
         }
     }
@@ -134,18 +117,21 @@
     flex-wrap: wrap;
     margin: auto 8.75%;
     justify-content: center;
-    // width: 82.8125%; // 265 / 320
     
     @media screen and (min-width: 768px){
         padding: 40% 0 20% 0;
+        justify-content: flex-start;
+        margin: auto 4%;
     }
 
     @media screen and (min-width: 1224px){
-        padding: 43% 0 10% 0;
+        padding: 39% 0 10% 0;
+        margin: auto 6.3%;
     }
 
     @media screen and (min-width: 1440px){
-        padding: 39% 0 10% 0;
+        padding: 35% 0 10% 0;
+        justify-content: center;
     }
 
     div{
@@ -155,7 +141,7 @@
         padding: 6%;
 
         @media screen and (min-width: 768px){
-            width: 40%;
+            width: 30%;
         }
 
         @media screen and (min-width: 1024px){
@@ -163,12 +149,12 @@
         }
 
         @media screen and (min-width: 1224px){
-            width: 28%;
+            width: 33%;
             padding: 3%;
         }
 
         @media screen and (min-width: 1440px){
-            width: 27%;
+            width: 20%;
         }
         
         a{
@@ -194,27 +180,25 @@
             letter-spacing: 0.3em;
 
             @media screen and (min-width: 768px){
-                width: 69%;
-                height: 146%;
+                width: 180px;
+                height: 142%;
             }
     
             @media screen and (min-width: 1024px){
-                width: 62%;
-                height: 136%;
+                width: 183px;
+                height: 132%;
             }
 
             @media screen and (min-width: 1224px){
-                height: 152%;
+                height: 151%;
             }
     
             @media screen and (min-width: 1440px){
-                width: 53%;
-                height: 148%;
+                height: 146%;
             }
         }
 
         img{
-            // width: 29.375%; // 94 /320 
             background-color: #fff;
             padding: 11px 11px 30px 11px;
             box-shadow: 0px 0px 10px rgba(0,0,0,.3);
